--- a/manifest.json
+++ b/manifest.json
@@ -9,9 +9,10 @@
       "js": [
         "js/create_iframe.js",
         "js/create_pagination.js",
-        "js/create_blacklist_toggle.js"
+        "js/create_blacklist_toggle.js",
+        "js/create_refresh_button.js"
       ],
-      "css": ["css/pagination.css", "css/blacklist_toggle.css"]
+      "css": ["css/pagination.css", "css/buttons.css"]
     }
   ],
   "icons": { "32": "favicon.png" }
