--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -16,5 +16,13 @@
       "css": ["css/pagination.css", "css/buttons.css"]
     }
   ],
-  "icons": { "32": "favicon.png" }
+  "icons": { "32": "favicon.png" },
+  "action": {
+    "default_popup": "popup/index.html",
+    "default_icon": { "32": "favicon.png" }
+  },
+  "background": {
+    "service_worker": "background.js"
+  },
+  "permissions": ["storage", "tabs"]
 }
