--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-query": "^3.39.2",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.5",
     "typescript": "^4.7.4"
